fix padding of main (aligns properly with header now)

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header{
 
 main{
     max-height: 80vh;
-    padding: 60px;
+    padding: 60px 0px;
     background-color: #1F2937;
     display: flex;
     flex-direction: row;
